--- a/html/receita/style.css
+++ b/html/receita/style.css
@@ -2,6 +2,7 @@ body {
     background-color: white;
     font-family:  Arial, Helvetica, sans-serif;
     color: black;
+    margin: 0 80px 0 80px;
 }
 
 h1 {
@@ -27,6 +28,17 @@ ul li {
     list-style: circle;
 }
 
-div {
-    background-color: red;
+footer {
+    background-color: rgb(184, 184, 184);
+    margin: 50px -80px 0 -80px;
+    text-align: center;
+    padding: 30px;
 }
+
+header {
+    background-color: rgb(184, 184, 184);
+    margin: 0 -80px 50px -80px;
+    text-align: center;
+    padding: 30px;
+}
+
