--- a/css/03-portifolio/style.css
+++ b/css/03-portifolio/style.css
@@ -51,12 +51,13 @@ p {
 .card {
     width: 160px;
     padding: 10px;
-    border: 1px solid #B17457;
-    border-radius: 6px;
+    background-color:  #B17457;
+    border-radius: 10px;
 }
 
 .card ul li {
     margin-bottom: 6px;
+    text-align: center;
 }
 
 a:-webkit-any-link {
@@ -69,4 +70,9 @@ a:-webkit-any-link {
     grid-gap: 10px;
     font-size: 36px; 
     padding-top: 10px;
+}
+footer {
+    background-color: #B17457;
+    border-radius: 10px;
+    padding: 20px;
 }
