--- a/css/03-portifolio/style.css
+++ b/css/03-portifolio/style.css
@@ -12,7 +12,7 @@ h1, h2, p, ul {
 }
 
 main {
-    width: 30vw;
+    width: 50vw;
     margin: 0 auto
 }
 
@@ -44,7 +44,7 @@ p {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     grid-gap: 10px;
 }
 
@@ -71,8 +71,20 @@ a:-webkit-any-link {
     font-size: 36px; 
     padding-top: 10px;
 }
+
 footer {
+    grid-gap: 10px;
     background-color: #B17457;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
+}
+
+@media (max-width: 690px ) {
+    body {
+        background-color: red;
+    }
+    
+    main {
+        width: 96vw 
+    }
 }
