--- a/style.css
+++ b/style.css
@@ -1,11 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    margin: 0; 
+    padding: 0;
+}
+
+:root {
+    --cor-fundo: #D8D2C2;
+    --cor-texto: #B17457;
+    --cor-navbar: #D8D2C2;
+    --cor-fundo-card: #4A4947 ;
+
+    font-size: 14px;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
+    width: 100%;
+}
+
+nav {
+    background-color: var(--cor-fundo-card);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 8vh;
+}
+
+.logo {
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: var(--cor-navbar);
+    text-decoration: none;
+}
+
+header nav ul li a {
+    color: var(--cor-navbar);
+    text-decoration: none;
+}
+
+a {
+    color: var(--cor-texto);
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    gap: 50px;
+    letter-spacing: 2px;
+}
+
+main {
+    padding: 20px;
+}
+
 .css {
     color: blue;
 }
 
 .html {
     color: orange;
-}
-
-body {
-    margin: 0 80px 0 80px;
 }
