--- a/site-adm/css/components/sidebar.css
+++ b/site-adm/css/components/sidebar.css
@@ -1,9 +1,11 @@
 aside {
-    height: 100vh;
     width: 200px;
+    height: 100vh;
     background-color: blue;
-    position: fixed;
-    left: 0;
+    /* position: fixed;
+    left: 0; */
+    grid-column: 1;
+    grid-row: 1 / 4;
 
     button {
         visibility: hidden;
